<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/question_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow>
            <TextView style="?android:textAppearanceMedium"
                android:padding="16dp"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_question"
                android:textAlignment="center"
                android:id="@+id/questionfield"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#3F51B5"/>
        </TableRow>

         <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder1"
                android:id="@+id/answer1"
                android:onClick="checkAnswer"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#03A9F4"/>
            </TableRow>
        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder2"
                android:id="@+id/answer2"
                android:onClick="checkAnswer"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#03A9F4"/>
        </TableRow>
        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder3"
                android:id="@+id/answer3"
                android:onClick="checkAnswer"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#03A9F4"/>
        </TableRow>
        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder4"
                android:id="@+id/answer4"
                android:onClick="checkAnswer"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#03A9F4"/>
        </TableRow>
    </TableLayout>

</ScrollView>