<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_instructions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:autoLink="all"/>

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/login" />

        <TextView
        android:id="@+id/panelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panel_instructions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/panelImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/djangoadmin" />

        <TextView
        android:id="@+id/addText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_instructions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"/>


        <ImageView
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/addnew" />

    </LinearLayout>
</ScrollView>