<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.iarc.nick.hamradioiarc.MainMenu">

    <TextView
        android:text="@string/welcometext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:paddingBottom="35dp"
        android:paddingTop="35dp"
        android:background="#009688"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="75dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|fill">

            <Button
                android:text="@string/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Small"
                android:background="#4DB6AC"
                android:onClick="startadvanced"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|fill">

            <Button
                android:text="@string/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Small"
                android:background="#4DB6AC"
                android:layout_below="@+id/button"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:onClick="howTo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|fill">

            <Button
                android:text="@string/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Small"
                android:background="#4DB6AC"
                android:layout_below="@+id/button2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:onClick="launchAbout" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
